# tauri-hotkey-rs

./: CHANGELOG.md  Cargo.toml  README.md
.changes/: config.json  fix_32bits_builds.md  initial.md  macos-modifiers.md
.github/workflows/: audit.yml  covector-version-or-publish.yml  lint-fmt.yml  test.yml
src/: lib.rs
tauri-hotkey-sys/: CHANGELOG.md  Cargo.toml  build.rs
tauri-hotkey-sys/src/: lib.rs  linux.rs  macos.rs  traits.rs  windows.rs
