[package]
name = "tauri-hotkey"
authors = [
  "Karl Skomski <karl@skomski.com>",
  "Lucas Nogueira <lucas@tauri.studio>"
]
description = "Cross platform global hotkey API"
edition = "2018"
license = "MIT"
repository = "https://github.com/tauri-apps/tauri-hotkey-rs"
version = "0.1.2"
exclude = [ "/tauri-hotkey-sys/" ]

[dependencies]
thiserror = "1"
strum_macros = "0.20"
strum = "0.20"
serde = { version = "1.0", features = [ "derive" ] }
tauri-hotkey-sys = { path = "./tauri-hotkey-sys/", version = "0.1.0" }
log = "0.4"
once_cell = "1.7"
