[package]
name = "tauri-hotkey-sys"
version = "0.1.2"
authors = [
  "James Birtles <jameshbirtles@gmail.com>",
  "Karl Skomski <karl@skomski.com>",
  "Lucas Nogueira <lucas@tauri.studio>"
]
description = "Native bindings for the Tauri hotkey API"
edition = "2018"
license = "MIT"
repository = "https://github.com/tauri-apps/tauri-hotkey-rs"

[dependencies]
thiserror = "1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = [ "winuser", "errhandlingapi" ] }

[target."cfg(target_os = \"linux\")".dependencies]
x11-dl = "2.18"

[target."cfg(target_os = \"macos\")".build-dependencies]
cc = "1"
